CostExplorer backend done